<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    android:background="@drawable/dialog_background_red"
    android:padding="16dp">

    <ImageView
        android:id="@+id/icon_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logout"
        app:tint="@color/red" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/are_you_sure"
        android:fontFamily="@font/roboto_bold"
        android:textSize="18sp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_logout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/are_you_sure_you_want_to_log_out"
        android:textColor="@color/dark_coral"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_logout"
        style="@style/Widget.Material3.Button.Red.TonalButton.PetLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_main" />

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent"
        android:indeterminateTint="?colorOnErrorContainer"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/button_logout"
        app:layout_constraintEnd_toEndOf="@id/button_logout"
        app:layout_constraintStart_toStartOf="@id/button_logout"
        app:layout_constraintTop_toTopOf="@+id/button_logout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        style="@style/Widget.Material3.Button.Red.TextButton.Dialog.PetLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/button_logout"
        app:layout_constraintEnd_toStartOf="@+id/button_logout"
        app:layout_constraintTop_toTopOf="@+id/button_logout" />

</androidx.constraintlayout.widget.ConstraintLayout>